--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.21.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.8",
     "@types/react": "17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "faker": "^5.5.3",
     "typescript": "4.4.2"
   }
 }
